@@ -71,15 +71,27 @@ import jdk.test.lib.process.OutputAnalyzer;
  */
 
 /*
- * @test id=Z
- * @requires vm.gc.Z
+ * @test id=ZSinglegen
+ * @requires vm.gc.ZSinglegen
  * @summary Test of diagnostic command GC.heap_dump with gzipped output (Z GC)
  * @library /test/lib
  * @modules java.base/jdk.internal.misc
  *          java.compiler
  *          java.management
  *          jdk.internal.jvmstat/sun.jvmstat.monitor
- * @run main/othervm -XX:+UseZGC HeapDumpCompressedTest
+ * @run main/othervm -XX:+UseZGC -XX:-ZGenerational HeapDumpCompressedTest
+ */
+
+/*
+ * @test id=ZGenerational
+ * @requires vm.gc.ZGenerational
+ * @summary Test of diagnostic command GC.heap_dump with gzipped output (Z GC)
+ * @library /test/lib
+ * @modules java.base/jdk.internal.misc
+ *          java.compiler
+ *          java.management
+ *          jdk.internal.jvmstat/sun.jvmstat.monitor
+ * @run main/othervm -XX:+UseZGC -XX:+ZGenerational HeapDumpCompressedTest
  */
 
 /*
@@ -131,31 +143,7 @@ public class HeapDumpCompressedTest {
         output = executor.execute("GC.heap_dump -gz=1 " + dump.getAbsolutePath());
         output.shouldContain("Unable to create ");
 
-        verifyHeapDump(dump);
+        HprofParser.parseAndVerify(dump);
         dump.delete();
-    }
-
-    private static void verifyHeapDump(File dump) throws Exception {
-
-        Asserts.assertTrue(dump.exists() && dump.isFile(),
-                           "Could not create dump file " + dump.getAbsolutePath());
-
-        try {
-            File out = HprofParser.parse(dump);
-
-            Asserts.assertTrue(out != null && out.exists() && out.isFile(),
-                               "Could not find hprof parser output file");
-            List<String> lines = Files.readAllLines(out.toPath());
-            Asserts.assertTrue(lines.size() > 0, "hprof parser output file is empty");
-            for (String line : lines) {
-                Asserts.assertFalse(line.matches(".*WARNING(?!.*Failed to resolve " +
-                                                 "object.*constantPoolOop.*).*"));
-            }
-
-            out.delete();
-        } catch (Exception e) {
-            e.printStackTrace();
-            Asserts.fail("Could not parse dump file " + dump.getAbsolutePath());
-        }
     }
 }
