@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -88,7 +88,7 @@ public class TestJcmdConfigure {
             for (Exception e : testExceptions) {
                 System.out.println("Error: " + e.getMessage());
             }
-            throw testExceptions.get(0);
+            throw testExceptions.getFirst();
         }
     }
 
